--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
+    "react-google-charts": "^4.0.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
